--- a/src/components/Container/container.css
+++ b/src/components/Container/container.css
@@ -10,6 +10,14 @@
     grid-template-rows: 1fr;
 }
 
+@media screen and (max-width: 830px) {
+    .container-main {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+}
+
+
 .name {
     font-size: 20em;
     color: rgb(98, 98, 98, 0.5);
@@ -23,14 +31,49 @@
     position: absolute;
 }
 .title {
-    top: 620px;
+    top: 700px;
     left: -20px;
-    font-size: 20em;
+    font-size: 15em;
     color: rgb(98, 98, 98, 0.5);
     z-index: -5;
     text-transform: uppercase;
     letter-spacing: -15px;
-    line-height: 250px;
+    word-spacing: 40px;
+    line-height: 0;
     font-family: lato-black;
     position: absolute;
 }
+
+@media screen and (max-width: 1800px)
+{
+    .title {
+        font-size: 12em;
+        top: 650px;
+    }
+}
+
+@media screen and (max-width: 1400px){
+    .title {
+        font-size: 10em;
+        top: 600px;
+    }
+    .name {
+        font-size: 15em;
+    }
+}
+
+@media screen and (max-width: 1150px){
+    .title {
+        font-size: 8em;
+        top: 600px;
+    }
+
+
+}
+
+@media screen and (max-width: 950px) {
+    .title, .name {
+        font-size: 0px;
+    }
+}
+
