--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,13 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  border: 0;
   cursor: none;
+  text-decoration: none;
+}
+
+a {
+  color: white;
 }
 
 .round{
