--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   border: 0;
   cursor: none;
   text-decoration: none;
+  overflow: hidden;
 }
 
 a {
@@ -33,6 +34,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
+  inset: 0;
   z-index: 100;
   width: 100%;
   height: 90vh;
