--- a/src/pages/Project/project.css
+++ b/src/pages/Project/project.css
@@ -11,3 +11,68 @@
     position: absolute;
     width: 100vw;
 }
+
+
+.project-menu {
+    list-style: none;
+    font-family: lato;
+    margin-left: 100px;
+}
+
+.project-menu-number {
+    color: white;
+}
+.project-menu>li {
+    display: flex;
+    align-items: flex-end;
+    margin: 60px 0;
+}
+
+.project-menu-item:hover::before{
+    content: "";
+    position: absolute;
+    transform: translateY(60px);
+    animation-name: slideIn;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    height: 2px;
+    background-color: #ff4d00;
+}
+
+.project-menu-item:hover {
+    color: white;
+    font-size: 4em;
+    animation-name: horizontal-shaking;
+    animation-duration: 0.3s;
+}
+
+.project-menu>li>p {
+    margin-right: 30px;
+    font-size: 1.2em;
+    word-spacing: 15px;
+}
+
+.project-menu-item {
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 3em;
+}
+
+@keyframes horizontal-shaking {
+    0% { transform: translateY(0); filter: blur(0);}
+    25% { transform: translateY(2px) }
+    50% { transform: translateY(-2px); filter: blur(3px); }
+    75% { transform: translateY(2px) }
+    100% { transform: translateY(0); filter: blur(0); }
+}
+
+@keyframes slideIn {
+    0% { width: 0}
+    100% {width: 120px}
+}
+
+
+@media screen and (max-width: 1350px){
+    .menu {
+        margin-left: 40px;
+    }
+}
